--- a/authorization-server/src/main/resources/application.properties
+++ b/authorization-server/src/main/resources/application.properties
@@ -1,3 +1,15 @@
-server.port=9000
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.security.oauth2=TRACE
+server.port = 9000
+logging.level.org.springframework.security = TRACE
+logging.level.org.springframework.security.oauth2 = TRACE
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/oauth?createDatabaseIfNoExist = true
+spring.datasource.username = postgres
+spring.datasource.password = 123456
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
+
+spring.jpa.defer-datasource-initialization = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.generate-ddl = false
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
