--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -51,6 +51,7 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+			<version>42.6.0</version>
 		</dependency>
 	</dependencies>
 
