--- a/authorization-server/src/main/resources/application.properties
+++ b/authorization-server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/oauth?createDatabaseIfN
 spring.datasource.username = postgres
 spring.datasource.password = 123456
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.defer-datasource-initialization = true
 spring.jpa.hibernate.ddl-auto = update
