--- a/authorization-server/src/main/resources/application.properties
+++ b/authorization-server/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl = false
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
+
+
+spring.security.oauth2.client.registration.google-idp.provider=google
+spring.security.oauth2.client.registration.google-idp.client-id=353480111923-kk5mna3c4col8cbt1a683isg7k96gq0f.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google-idp.client-secret=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
